test_scripts/errors/fn_extra_kwargs.shm
fn test(a) {
    print(a);
}

test("test", b="test", fizz="buzz");
