test_scripts/errors/fn_extra_kwargs.stderr
 3 | }
 4 | 
 5 | test("test", b="test", fizz="buzz");
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Unused kwargs remaining: b fizz
